fixed css for menu overflow in widgets

--- a/mango-viz/bdgenomics/mango/js/css/mangoviz.css
+++ b/mango-viz/bdgenomics/mango/js/css/mangoviz.css
@@ -1,3 +1,9 @@
-.reads {
-  height: 200px;
+.reads, .features {
+  height: 200px !important;
+}
+
+/* Used to show overflow for gear dropdown menus.
+   Can add :has(> .pileup-root) when css has attribute works. */
+.jupyter-widgets-view, .p-Widget {
+    overflow: scroll;
 }
